@@ -1,26 +1,17 @@
 package com.technologica.data.advancements;
 
 import java.util.List;
-import java.util.function.Consumer;
+import java.util.concurrent.CompletableFuture;
 
-import com.google.common.collect.ImmutableList;
-
-import net.minecraft.advancements.Advancement;
-import net.minecraft.data.DataGenerator;
-import net.minecraft.data.advancements.AdvancementProvider;
+import net.minecraft.core.HolderLookup.Provider;
+import net.minecraft.data.PackOutput;
 import net.minecraftforge.common.data.ExistingFileHelper;
+import net.minecraftforge.common.data.ForgeAdvancementProvider;
 
-public class TechnologicaAdvancementProvider extends AdvancementProvider {
-    private final List<Consumer<Consumer<Advancement>>> tabs = ImmutableList.of(new TechnologicaHusbandryAdvancements(fileHelper));
+public class TechnologicaAdvancementProvider extends ForgeAdvancementProvider {
+	private final static List<AdvancementGenerator> subProviders = List.of(new TechnologicaHusbandryAdvancements());
 
-    public TechnologicaAdvancementProvider(DataGenerator generatorIn, ExistingFileHelper fileHelperIn) {
-	super(generatorIn, fileHelperIn);
-    }
-
-    @Override
-    protected void registerAdvancements(Consumer<Advancement> consumer, net.minecraftforge.common.data.ExistingFileHelper fileHelper) {
-	for (Consumer<Consumer<Advancement>> consumer1 : this.tabs) {
-	    consumer1.accept(consumer);
-	}
+    public TechnologicaAdvancementProvider(PackOutput packOutputIn, CompletableFuture<Provider> lookupProviderIn, ExistingFileHelper existingFileHelper) {
+    	super(packOutputIn, lookupProviderIn, existingFileHelper, subProviders);
     }
 }
