@@ -2,31 +2,25 @@ package com.technologica.data.loot;
 
 import java.util.List;
 import java.util.Map;
-import java.util.function.BiConsumer;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
+import java.util.Set;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
-
-import net.minecraft.data.DataGenerator;
+import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.LootTableProvider;
+import net.minecraft.data.loot.packs.VanillaLootTableProvider;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.level.storage.loot.LootTable;
-import net.minecraft.world.level.storage.loot.LootTable.Builder;
 import net.minecraft.world.level.storage.loot.ValidationContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 
 public class TechnologicaLootTableProvider extends LootTableProvider {
-	private final List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> subProviders = ImmutableList.of(Pair.of(TechnologicaBlockLoot::new, LootContextParamSets.BLOCK), Pair.of(TechnologicaEntityLoot::new, LootContextParamSets.ENTITY));
+	private final List<SubProviderEntry> subProviders = List.of(new LootTableProvider.SubProviderEntry(TechnologicaBlockLoot::new, LootContextParamSets.BLOCK), new LootTableProvider.SubProviderEntry(TechnologicaEntityLoot::new, LootContextParamSets.ENTITY));
 	
-	public TechnologicaLootTableProvider (DataGenerator generatorIn) {
-		super(generatorIn);
+	public TechnologicaLootTableProvider (PackOutput packOutput) {
+		super(packOutput, Set.of(), VanillaLootTableProvider.create(packOutput).getTables());
 	}
 	
 	@Override
-	protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, Builder>>>, LootContextParamSet>> getTables() {
+	public List<LootTableProvider.SubProviderEntry> getTables() {
 		return subProviders;
 	}
 	
